[package]
name = "sitegen"
version = "0.1.0"
authors = ["Christopher Bergqvist <chris@digitalpoetry.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
notify = "4.0.15"
pulldown-cmark = "0.7.1"
sha1 = "0.6.0"
yaml-rust = "0.4.3"
humantime = "2.0.1"
crossbeam-utils = "0.8.7"

[[bin]]
name = "sitegen"
path = "src/main.rs"
